--- a/nova/composer.json
+++ b/nova/composer.json
@@ -13,7 +13,7 @@
     }
   ],
   "require": {
-    "php": "^7.2.5",
+    "php": "^7.2.5 |^8.0",
     "brick/money": "^0.5.0",
     "cakephp/chronos": "^1.0|^2.0",
     "doctrine/dbal": "^2.9",
@@ -83,5 +83,5 @@
   ],
   "minimum-stability": "dev",
   "prefer-stable": true,
-  "version": "3.18.0"
+  "version": "4.14.3"
 }
